--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 __pycache__/postgresql.cpython-37.pyc
 postgresql.py
 .ipynb_checkpoints/Untitled-checkpoint.ipynb
+.ipynb_checkpoints/hw_sql_bonus-checkpoint.ipynb
